--- a/app/resources/views/helpit-new-ticket.html
+++ b/app/resources/views/helpit-new-ticket.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../../resources/css/appstyle.css">
     <script src="../../../libs/jquery/jquery-2.2.4.js"></script>
     <script src="../../../libs/bootstrap-3.3.6-dist/js/bootstrap.js"></script>
-    <script src="../../../libs/bootstrap-3.3.6-dist/js/app.js"></script>
+    <script src="../script/app.js"></script>
     <!--here's where the red button icon will be-->
 </head>
 <body id="new-ticket">
@@ -28,7 +28,7 @@
                             <span class="glyphicon glyphicon-menu-hamburger big-menu-button"></span>
                         </a>
                         <ul class="dropdown-menu right-menu-dropdown">
-                            <li><a href="#">Create New Ticket</a></li>
+                            <li><a href="#" class="helpit-new-ticket">Create New Ticket</a></li>
                             <li><a href="#">Profile</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="#">About Help IT</a></li>
