--- a/app/resources/views/helpit-review-complete.html
+++ b/app/resources/views/helpit-review-complete.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Done</title>
+    <title>Review Sent</title>
     <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="../../../libs/bootstrap-3.3.6-dist/css/bootstrap.css">
     <link rel="stylesheet" href="../../resources/css/appstyle.css">
@@ -41,35 +41,35 @@
         <button type="button" class="btn btn-default helpitlogo"></button>
     </div>
     <!--whenever logo is pressed it will bring you back to the home page-->
-    </header>
+</header>
 
 <div id="new-ticket-title">
-    <h1>Have No Fear</h1>
+    <h1>Review Sent!</h1>
 
     <div class="container-fluid">
-    <div class="row">
-        <div class="col-xs-10 col-xs-offset-1">
-            <div id="help-it-confirmation">
-                Your Help Desk Specialist Will Soon Be Here
+        <div class="row">
+            <div class="col-xs-10 col-xs-offset-1">
+                <div id="help-it-confirmation">
+                    Thank You For Reviewing Dan's Assistance
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-10 col-xs-offset-1">
+                <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-10 col-xs-offset-1">
+                <button id="check-status-btn" type="button" class="btn button-style">CHECK TICKET STATUS</button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-10 col-xs-offset-1">
+                <button id="submit-ticket-btn" type="button" class="btn button-style">SUBMIT NEW TICKET</button>
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-xs-10 col-xs-offset-1">
-            <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-10 col-xs-offset-1">
-            <button id="check-status-btn" type="button" class="btn button-style">CHECK TICKET STATUS</button>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-10 col-xs-offset-1">
-            <button id="submit-ticket-btn" type="button" class="btn button-style">SUBMIT NEW TICKET</button>
-        </div>
-    </div>
-</div>
 </div>
 </body>
 
