--- a/app/resources/views/helpit-adminside-status.html
+++ b/app/resources/views/helpit-adminside-status.html
@@ -74,38 +74,7 @@
 </div>
 <div>
     <table id="ticket-status-table">
-        <tbody>
-        <tr>
-            <td class="ticket-status-date">01/07/2016</td>
-            <td>Seen</td>
-            <td class="ticket-status-icon">
-                <span class="glyphicon glyphicon-sunglasses" aria-hidden="true"></span>
-            </td>
-        </tr>
-        <tr>
-            <td class="ticket-status-date">10/06/2016</td>
-            <td>Pending</td>
-            <td class="ticket-status-icon">
-                <span class="glyphicon glyphicon-screenshot" aria-hidden="true"></span>
-            </td>
-        </tr>
-        <tr>
-            <td class="ticket-status-date">04/06/2016</td>
-            <td>Done</td>
-            <td class="ticket-status-icon">
-                <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-                </td>
-            <!--should be gray when sent-->
-        </tr>
-        <tr>
-            <td class="ticket-status-date">04/06/2016</td>
-            <td>Done</td>
-            <td class="ticket-status-icon">
-                <span class="glyphicon glyphicon-glass" aria-hidden="true"></span>
-            </td>
-            <!--should be gray when sent-->
-        </tr>
-
+        <tbody id="ticket-status-tbody">
         </tbody>
     </table>
 
