added a JSON file that takes care of the user side status

--- a/app/resources/views/tickets-status.html
+++ b/app/resources/views/tickets-status.html
@@ -73,37 +73,37 @@
 </div>
 <div>
     <table id="ticket-status-table">
-        <tbody>
-        <tr>
-            <td class="ticket-status-date">01/07/2016</td>
-            <td>Seen</td>
-            <td class="ticket-status-icon">
-                <span class="glyphicon glyphicon-sunglasses" aria-hidden="true"></span>
-            </td>
-        </tr>
-        <tr>
-            <td class="ticket-status-date">10/06/2016</td>
-            <td>Pending</td>
-            <td class="ticket-status-icon">
-                <span class="glyphicon glyphicon-sunglasses" aria-hidden="true"></span>
-            </td>
-        </tr>
-        <tr>
-            <td class="ticket-status-date">04/06/2016</td>
-            <td>Done</td>
-            <td class="ticket-status-icon">
-                <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-                <span class="send-review-button-label">Review</span></td>
-            <!--should be gray when sent-->
-        </tr>
-        <tr>
-            <td class="ticket-status-date">04/06/2016</td>
-            <td>Done</td>
-            <td class="ticket-status-icon">
-                <span class="glyphicon glyphicon-sunglasses" aria-hidden="true"></span>
-            </td>
-            <!--should be gray when sent-->
-        </tr>
+        <tbody id="ticket-status-user-tbody">
+        <!--<tr>-->
+            <!--<td class="ticket-status-date">01/07/2016</td>-->
+            <!--<td>Seen</td>-->
+            <!--<td class="ticket-status-icon">-->
+                <!--<span class="glyphicon glyphicon-sunglasses" aria-hidden="true"></span>-->
+            <!--</td>-->
+        <!--</tr>-->
+        <!--<tr>-->
+            <!--<td class="ticket-status-date">10/06/2016</td>-->
+            <!--<td>Pending</td>-->
+            <!--<td class="ticket-status-icon">-->
+                <!--<span class="glyphicon glyphicon-sunglasses" aria-hidden="true"></span>-->
+            <!--</td>-->
+        <!--</tr>-->
+        <!--<tr>-->
+            <!--<td class="ticket-status-date">04/06/2016</td>-->
+            <!--<td>Done</td>-->
+            <!--<td class="ticket-status-icon">-->
+                <!--<span class="glyphicon glyphicon-star" aria-hidden="true"></span>-->
+                <!--<span class="send-review-button-label"></span></td>-->
+            <!--&lt;!&ndash;should be gray when sent&ndash;&gt;-->
+        <!--</tr>-->
+        <!--<tr>-->
+            <!--<td class="ticket-status-date">04/06/2016</td>-->
+            <!--<td>Done</td>-->
+            <!--<td class="ticket-status-icon">-->
+                <!--<span class="glyphicon glyphicon-sunglasses" aria-hidden="true"></span>-->
+            <!--</td>-->
+            <!--&lt;!&ndash;should be gray when sent&ndash;&gt;-->
+        <!--</tr>-->
 
         </tbody>
     </table>
