Fixed linking to survey button!

--- a/app/resources/views/helpit-adminside-status.html
+++ b/app/resources/views/helpit-adminside-status.html
@@ -74,7 +74,7 @@
 </div>
 <div>
     <table id="ticket-status-table">
-        <tbody id="ticket-status-tbody">
+        <tbody id="ticket-status-user-tbody">
         </tbody>
     </table>
 
