--- a/app/resources/views/helpit-survey.html
+++ b/app/resources/views/helpit-survey.html
@@ -111,6 +111,7 @@
         </div>
     </div>
 </div>
+<!--radio buttons not responsive-->
 <div class="container-fluid helpit-questions">
     <div class="helpit-survey-row">
         <div class="col-xs-10 col-xs-offset-1">
