Fixed the last survey issue

--- a/app/resources/views/helpit-survey.html
+++ b/app/resources/views/helpit-survey.html
@@ -111,7 +111,7 @@
         </div>
     </div>
 </div>
-<!--radio buttons not responsive-->
+<!--radio buttons not responsive like they work, they just don't look good if it's not on a smart phone sizing-->
 <div class="container-fluid helpit-questions">
     <div class="helpit-survey-row">
         <div class="col-xs-10 col-xs-offset-1">
